cmake_minimum_required(VERSION 2.6)
set(ProjName OSGCh09Ex04)
set(UtilFile ../common/common.cpp ../common/PickHandler.cpp)
project(${ProjName})

set(CMAKE_INCLUDE_PATH "D:/Dependency/cegui/include/cegui-0")
set(CMAKE_LIBRARY_PATH "D:/Dependency/cegui/lib")

find_package(OpenThreads)
find_package(osg)
find_package(osgDB)
find_package(osgUtil)
find_package(osgViewer)
find_package(osgGA)
find_package(osgAnimation)
find_package(osgText)
find_package(OpenGL)
find_path(CEGUI_INCLUDE_DIR CEGUI/CEGUI.h)
find_library(CEGUI_GL_LIBRARY CEGUIOpenGLRenderer-0)
find_library(CEGUI_LIBRARY CEGUIBase-0)

message(${CEGUI_INCLUDE_DIR})

macro(config_project PROJNAME LIBNAME)
	include_directories( ${${LIBNAME}_INCLUDE_DIR} )
	target_link_libraries( ${PROJNAME} ${${LIBNAME}_LIBRARY} )
endmacro()


include_directories(../common)
include_directories(${CEGUI_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR})
add_executable(${ProjName} ${UtilFile} main.cpp)
target_link_libraries(${ProjName} ${CEGUI_GL_LIBRARY} ${CEGUI_LIBRARY} ${OPENGL_gl_LIBRARY})
config_project(${ProjName} OPENTHREADS)
config_project(${ProjName} OSG)
config_project(${ProjName} OSGDB)
config_project(${ProjName} OSGUTIL)
config_project(${ProjName} OSGVIEWER)
config_project(${ProjName} OSGGA)
config_project(${ProjName} OSGANIMATION)
config_project(${ProjName} OSGTEXT)
